src/test/deca/syntax/valid/integer_2.deca
// Description :
// Vérifier l'affectation d'un entier;
//
// Resultats :
// ok

{
int a = 2147483647;
}
