src/test/deca/syntax/invalid/float_infinite.deca
//Description
//    Vérifier l'inclusion d'un fichier (lexicalement);
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
float a = 300000000000000000000000000000000000000000000000000000000000000000000.0;
}
